syntax = "proto3";

message HealthCheckResponse {

    string engine_status = 0;
    string relayer_status = 1;
}
service Admin {
    rpc HealthCheck (google.protobuf.Empty) returns (HealthCheckResponse);
}

message google {

    message protobuf {

        message Empty {
        }
    }
}

enum Side {

    BID = 0;
    ASK = 1;
}

enum TimeInForce {

    GTC = 0;
    FOK = 1;
    IOC = 2;
}

message CreateOrderRequest {

    string market = 0;
    Side side = 1;
    int64 amount = 2;
    int64 price = 3;
    TimeInForce time_in_force = 4;
}

message CreateOrderResponse {

    string order_id = 0;
}
service Order {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message WatchMarketRequest {

    string market = 0;
}

message WatchMarketResponse {
  int64 base_amount = 0;
  int64 counter_amount = 1;
  Side side = 2;
}

service OrderBook {
    rpc WatchMarket (WatchMarketRequest) returns (stream WatchMarketResponse);
}
